Fix image filename case in multipleChoice.html

--- a/multipleChoice.html
+++ b/multipleChoice.html
@@ -141,7 +141,7 @@ document.addEventListener("DOMContentLoaded", function() {
           text: "Activate is a place where we can play many fun activities. Somewhat like gamebox but it is more active and different games so we can change it up a bit and try a new place."
         },
       {
-          img: "kemah.jpg",
+          img: "Kemah.jpg",
           alt: "Kemah Plan",
           text: "I know it has been a while that I have been bullied on not knowing what this place is. Why not enjoy a little escapada and go together and have some fun activities while we are there."
         },
