Change picnic image from .jpg to .png

--- a/multipleChoice.html
+++ b/multipleChoice.html
@@ -181,7 +181,7 @@ document.addEventListener("DOMContentLoaded", function() {
                   text: "This is an adventure in the skies that we missed out on but I have not forgotten about it. We can go and have a fun and adventurous date together. Although it does have to be before mid day because it does look as it is going to rain this afternoon. :)"
                 },
                 {
-                    img: "picnic.jpg",
+                    img: "picnic.png",
                     alt: "Picnic Plan",
                     text: "It has been almost 4 years since we had our picnic at the park in buffalo bayou. Would you like to recreate another picnic with me love?"
                  },
